# PnLCalib

./: .gitignore  README.md  explore_dataset.ipynb  explore_dataset.py  explore_model.py  inference.py  main.py  mypy.ini  pyproject.toml  requirements.txt  train.py  train_l.py
.ipynb_checkpoints/: explore_dataset-checkpoint.ipynb
config/: hrnetv2_w48.yaml  hrnetv2_w48_nj22.yaml
model/: cls_hrnet.py  dataloader.py  transforms.py
scripts/: eval_tswc.py  eval_wc14.py  inference_sn.py  inference_tswc.py  inference_wc14.py  run_pipeline_sn22.sh  run_pipeline_sn23.sh  run_pipeline_tswc.sh  run_pipeline_wc14_3D.sh
sn_calibration/src/: camera.py  evalai_camera.py  evaluate_camera.py
tests/: draft_extract_basketball_court.py  test_dataloader.py  test_ellipse_fit.ipynb  test_ellipse_fit.py
utils/: utils_calib.py  utils_heatmap.py  utils_keypoints.py
